--- a/index.html
+++ b/index.html
@@ -505,21 +505,21 @@ When he’s not working with clients, you’ll likely find Sam catching a show i
   <div class="listings-grid">
     <a href="https://www.zillow.com/homedetails/3741-Dorchester-Dr-Williamstown-NJ-08094/325535118_zpid/" class="listing-card">
       <div class="listing-img-wrapper">
-        <img src="images/3741.png" alt="3741 Dorchester Dr" class="listing-img">
+        <img src="3741.png" alt="3741 Dorchester Dr" class="listing-img">
       </div>
       <h3>3741 Dorchester Dr</h3>
       <p>Williamstown, NJ · 3 Bed / 2 Bath · $495,000</p>
     </a>
     <a href="https://www.zillow.com/homedetails/535-Pine-St-Philadelphia-PA-19106/10196408_zpid/" class="listing-card">
       <div class="listing-img-wrapper">
-        <img src="images/535.png" alt="535 Pine St" class="listing-img">
+        <img src="535.png" alt="535 Pine St" class="listing-img">
       </div>
       <h3>535 Pine St</h3>
       <p>Philadelphia, PA · 3 Bed / 4 Bath · $715,000</p>
     </a>
     <a href="https://www.zillow.com/homedetails/1837-W-Thompson-St-Philadelphia-PA-19121/10455872_zpid/" class="listing-card">
       <div class="listing-img-wrapper">
-        <img src="images/1837.png" alt="1837 W Thompson St" class="listing-img">
+        <img src="1837.png" alt="1837 W Thompson St" class="listing-img">
       </div>
       <h3>1837 W Thompson St</h3>
       <p>Philadelphia, PA · 5 Bed / 3 Bath · $380,000</p>
@@ -838,7 +838,7 @@ const quizData = [
 <footer class="made-by">
   <a href="https://fastwalk.org" target="_blank" rel="noopener">
     <span>Made by</span>
-    <img src="images/fastwalk-logo.png" alt="Fastwalk logo" class="made-by-logo">
+    <img src="fastwalk-logo.png" alt="Fastwalk logo" class="made-by-logo">
   </a>
 </footer>
 
