--- a/index.html
+++ b/index.html
@@ -40,4 +40,84 @@
             <img src="3741.png" alt="3741 Dorchester Dr" class="listing-img">
           </div>
           <h3>3741 Dorchester Dr</h3>
-          <p>Williamstown, NJ · 3 Bed / 2 Bath · $495
+          <p>Williamstown, NJ · 3 Bed / 2 Bath · $495,000</p>
+        </a>
+        <a href="https://www.zillow.com/homedetails/535-Pine-St-Philadelphia-PA-19106/10196408_zpid/" class="listing-card">
+          <div class="listing-img-wrapper">
+            <img src="535.png" alt="535 Pine St" class="listing-img">
+          </div>
+          <h3>535 Pine St</h3>
+          <p>Philadelphia, PA · 3 Bed / 4 Bath · $715,000</p>
+        </a>
+        <a href="https://www.zillow.com/homedetails/1837-W-Thompson-St-Philadelphia-PA-19121/10455872_zpid/" class="listing-card">
+          <div class="listing-img-wrapper">
+            <img src="1837.png" alt="1837 W Thompson St" class="listing-img">
+          </div>
+          <h3>1837 W Thompson St</h3>
+          <p>Philadelphia, PA · 5 Bed / 3 Bath · $380,000</p>
+        </a>
+      </div>
+      <p class="more-listings">
+        <a
+          href="https://www.zillow.com/profile/CarchidiRealEstate"
+          class="more-listings-link"
+          target="_blank"
+          rel="noopener"
+        >
+          Click here to see more listings.
+        </a>
+      </p>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="room" data-label="Testimonials">
+      <div class="blueprint-line"></div>
+      <h2>What Clients Say</h2>
+      <div class="elfsight-app-a82865db-06d7-4f33-b299-a248be10e201" data-elfsight-app-lazy></div>
+    </section>
+
+    <!-- Instagram -->
+    <section class="room" data-label="Instagram">
+      <div class="blueprint-line"></div>
+      <h2>Day In the Life</h2>
+      <div class="elfsight-app-2a9f788f-4859-4bb0-8875-b376d10707c8" data-elfsight-app-lazy></div>
+    </section>
+
+    <!-- Buyer Quiz Section -->
+    <section class="room" data-label="Buyer Quiz">
+      <div class="quiz-container" id="quiz">
+        <h2>Are You Ready to Buy?</h2>
+        <div class="quiz-content">
+          <div class="quiz-question" id="question"></div>
+          <div class="quiz-options" id="options"></div>
+          <div class="quiz-progress" id="progress"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="room" data-label="Contact">
+      <div class="blueprint-line"></div>
+      <div style="text-align: left" class="sender-form-field" data-sender-form-id="makgwb64evolmx9cram"></div>
+    </section>
+  </div>
+
+  <!-- Floating logo -->
+  <a id="floating-logo-link">
+    <img id="floating-logo" src="float-cursor.png" alt="Floating Logo">
+  </a>
+
+  <!-- Footer -->
+  <footer class="made-by">
+    <a href="https://fastwalk.org" target="_blank" rel="noopener">
+      <span>Made by</span>
+      <img src="fastwalk-logo.png" alt="Fastwalk logo" class="made-by-logo">
+    </a>
+  </footer>
+
+  <!-- Scripts (unchanged from original) -->
+  <script src="https://cdn.sender.net/accounts_resources/universal.js" async></script>
+  <!-- Your original scrolling, animation, and quiz scripts would stay here -->
+
+</body>
+</html>
